# Spotter

./: .gitignore  DISCLAIMER  README.md  api_meme_map.py  app.py  haystack.py  main.py  meme_map.py  metadata.py  privacy_policy.txt  pyproject.toml  requirements.txt  ui.py
.streamlit/: config.toml
NearbyLinkNotifier/: APIService.swift  AppDelegate.swift  ContentView.swift  Info.plist  LinkPreviewView.swift  LocationManager.swift  Models.swift  NearbyLinkNotifierApp.swift
NearbyLinkNotifier.xcodeproj/: project.pbxproj
NearbyLinkNotifier.xcodeproj/xcshareddata/xcschemes/: NearbyLinkNotifier.xcscheme
NearbyLinkNotifier.xcodeproj/xcuserdata/maximilianarnold.xcuserdatad/xcschemes/: xcschememanagement.plist
NearbyLinkNotifier/Assets.xcassets/AppIcon.appiconset/: Contents.json
Spotter/: APIService.swift  LinkPreviewView.swift  Models.swift  SpotterApp.swift
Spotter.xcodeproj/: project.pbxproj
Spotter.xcodeproj/xcshareddata/xcschemes/: Spotter.xcscheme
SpotterTests/: NearbyLinkNotifierTests.swift
SpotterUITests/: NearbyLinkNotifierUITests.swift  NearbyLinkNotifierUITestsLaunchTests.swift
files/: example_file.md  example_file.txt
scripts/: instagram.py
