[project]
name = "spotter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=4.0.0",
    "fastapi>=0.116.1",
    "folium>=0.20.0",
    "geopy>=2.4.1",
    "pymongo>=4.14.1",
    "python-dotenv>=1.1.1",
    "sqlalchemy>=2.0.43",
    "streamlit>=1.49.1",
    "streamlit-folium>=0.25.1",
    "uvicorn>=0.35.0",
    "validators>=0.35.0",
]
